Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
Description
|
10.5 5fc172fd |
perl ./mtr rpl.rpl_mdev10863 --repeat=100
|
|
|
==1144805==ERROR: AddressSanitizer: heap-use-after-free on address 0x6120001955a0 at pc 0x55ed50ec571f bp 0x7f34bdc55a80 sp 0x7f34bdc55a78
|
READ of size 4 at 0x6120001955a0 thread T49
|
#0 0x55ed50ec571e in Query_log_event::do_apply_event(rpl_group_info*, char const*, unsigned int) /data/src/10.5/sql/log_event_server.cc:1721
|
#1 0x55ed5019deb8 in Log_event::apply_event(rpl_group_info*) /data/src/10.5/sql/log_event.h:1488
|
#2 0x55ed5019deb8 in apply_event_and_update_pos_apply /data/src/10.5/sql/slave.cc:3851
|
#3 0x55ed50856ecd in rpt_handle_event /data/src/10.5/sql/rpl_parallel.cc:62
|
#4 0x55ed50864e2a in handle_rpl_parallel_thread /data/src/10.5/sql/rpl_parallel.cc:1363
|
#5 0x55ed512a87d4 in pfs_spawn_thread /data/src/10.5/storage/perfschema/pfs.cc:2201
|
#6 0x7f34d80b0ea6 in start_thread nptl/pthread_create.c:477
|
#7 0x7f34d7caddee in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xfddee)
|
Reproducible on 10.5+.
The failure apparently started happening after the commits related to MDEV-28632 (10.5+ part), specifically
commit 7b500f04fb0baf56b02583f82982508203e58d38
|
Author: Sergei Golubchik
|
Date: Sat Jul 23 16:38:03 2022 +0200
|
|
|
MDEV-29078 For old binary logs explicit_defaults_for_timestamp presumed to be OFF, server value ignored
|
Attachments
Issue Links
- is caused by
-
MDEV-28632 Change default of explicit_defaults_for_timestamp to ON
-
- Closed
-
- relates to
-
MDEV-29332 Tests in BB sometimes failing with runtime error: member access within address
-
- Closed
-
-
MDEV-29439 MSAN use-of-unitialized-value errors in Query_log_event::do_apply_event
-
- Closed
-