MDEV-29322 ASAN heap-use-after-free in Query_log_event::do_apply_event

The ASAN report was reported in the parallel slave execution of a Query
event and implicitly involved (so also parallelly run) Format-Description
event.
The Query actually had dependency on a preceding "old" FD whose
instance got destructed, so to cause the ASAN error.

The case is fixed with copying of the value of
`options_written_to_bin_log` the sensitive member
of FD event into worker's stable placeholders, so FD change
won't affect Queries dependent on "old" instances.

The method observes the following properties:
0. each worker gets its private copy;
1. the copied value gets a part of the execution context for any
   Queries that follow the FD in binlog;
2. any new FD forces a new copy which does not any affect on
   the past (in binlog order) Queries which might be still in
   execution.