sql/rpl_rli.cc
@@ -2160,7 +2160,8 @@ rpl_group_info::reinit(Relay_log_info *rli)
 rpl_group_info::rpl_group_info(Relay_log_info *rli)
   : thd(0), wait_commit_sub_id(0),
     wait_commit_group_info(0), parallel_entry(0),
-    deferred_events(NULL), m_annotate_event(0), is_parallel_exec(false)
+    deferred_events(NULL), m_annotate_event(0), is_parallel_exec(false),
+    options_to_bin_log(0)
 {
   reinit(rli);
   bzero(&current_gtid, sizeof(current_gtid));
